--- a/5-module/2-task/index.html
+++ b/5-module/2-task/index.html
@@ -1,76 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Занятие 5: Сортируемая таблица</title>
-    <link href="style.css" rel="stylesheet">
-    <script src="index.js"></script>
+  <meta charset="UTF-8">
+  <title>Занятие 5: Сортируемая таблица</title>
+  <link href="style.css" rel="stylesheet">
+  <script src="index.js"></script>
 </head>
+
 <body>
-    <h1>Пример минимально необходимой структуры таблицы для прохождения тестов</h1>
-    <div class="example">
-        <table>
-            <thead>
-                <tr>
-                    <td>Name</td>
-                    <td>Age</td>
-                    <td>Salary</td>
-                    <td>City</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Ilia</td>
-                    <td>25</td>
-                    <td>1000</td>
-                    <td>Petrozavods</td>
-                </tr>
+  <h1>Пример минимально необходимой структуры таблицы для прохождения тестов</h1>
+  <div class="example">
+    <table>
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Age</td>
+          <td>Salary</td>
+          <td>City</td>
+        </tr>
+      </thead>
+      <tbody>
 
-            </tbody>
-        </table>
-    </div>
+      </tbody>
+    </table>
+  </div>
 
-    <h1>Результат</h1>
-    <div class="result">
+  <h1>Результат</h1>
+  <div class="result">
 
-    </div>
+  </div>
 
-    <script>
-        'use strict';
+  <script>
+    'use strict';
 
-        let rows = [
-            {
-                name: 'Ilia',
-                age: 25,
-                salary: 1000,
-                city: 'Petrozavodsk'
-            },
-            {
-                name: 'Vasya',
-                age: 14,
-                salary: 1500,
-                city: 'Moscow'
-            },
-            {
-                name: 'Ivan',
-                age: 22,
-                salary: 100,
-                city: 'Bryansk'
-            },
-            {
-                name: 'Petya',
-                age: 45,
-                salary: 990,
-                city: 'Chita'
-            }
-        ];
+    let rows = [{
+        name: 'Ilia',
+        age: 25,
+        salary: 1000,
+        city: 'Petrozavodsk'
+      },
+      {
+        name: 'Vasya',
+        age: 14,
+        salary: 1500,
+        city: 'Moscow'
+      },
+      {
+        name: 'Ivan',
+        age: 22,
+        salary: 100,
+        city: 'Bryansk'
+      },
+      {
+        name: 'Petya',
+        age: 45,
+        salary: 990,
+        city: 'Chita'
+      }
+    ];
 
-        let table = new SortableTable(rows);
-        document.querySelector('.result').appendChild(table.el);
+    let table = new SortableTable(rows);
+    document.querySelector('.result').appendChild(table.el);
 
-    </script>
+  </script>
 
-    <button onclick="table.sort(0)">По имени</button>
-    <button onclick="table.sort(2)">По зарплате</button>
+  <button onclick="table.sort(0)">По имени</button>
+  <button onclick="table.sort(2)">По зарплате</button>
 </body>
+
 </html>
